# fastapi-template

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/common/: schemas.py  service.py
src/core/: __init__.py  auth.py  auth_middleware.py  custom_response.py  dbConfig.py  dbhelper.py  jwt.py  load_routers.py  log.py  log_config.py  response.py  security.py
src/core/interfaces/: response.py
src/modules/user/: user_controller.py  user_service.py
src/modules/user/models/: __init__.py  user.py
src/modules/user/schemas/: user.py
